--- a/Course/src/main/resources/application.yml
+++ b/Course/src/main/resources/application.yml
@@ -11,3 +11,4 @@ spring:
   h2:
     console:
       enabled: true  application:    name: course-service
+eureka:  instance:    instance-id: ${spring.application.name}:${random.uuid}
