--- a/Properties/course-service.properties
+++ b/Properties/course-service.properties
@@ -1,4 +1,4 @@
 spring.datasource.driver-class-name = org.h2.Driver
 spring.h2.console.enabled = true
 spring.jpa.database-platform = org.hibernate.dialect.H2Dialect
-dtw.test = still testing...
+dtw.test = even more testing...
