--- a/Course/src/main/resources/bootstrap.yml
+++ b/Course/src/main/resources/bootstrap.yml
@@ -12,5 +12,8 @@ spring:
     name: course-service
   cloud:
     config:
-      uri: http://localhost:8888
+      uri: http://localhost:8888  rabbitmq:    host: localhost
+    port: 5672
+    username: guest
+    password: guest
 management.endpoints.web.exposure.include: "*"
