--- a/Course/src/main/resources/bootstrap.yml
+++ b/Course/src/main/resources/bootstrap.yml
@@ -15,5 +15,5 @@ spring:
       uri: http://localhost:8888  rabbitmq:    host: localhost
     port: 5672
     username: guest
-    password: guest
+    password: guest  security:    oauth2:      resourceserver:        jwt:          issuer-uri: http://localhost:8180/auth/realms/everplatform-realm
 management.endpoints.web.exposure.include: "*"
