--- a/GatewayServer/src/main/resources/application.yml
+++ b/GatewayServer/src/main/resources/application.yml
@@ -2,7 +2,10 @@ spring:
   application:
     name: api-gateway
   cloud:    gateway:      discovery:        locator:          enabled: true          lower-case-service-id: true      routes:      - id: course-service
-        uri: lb://course-service        predicates:        - Path=/api/course      default-filters:      - TokenRelay    loadbalancer:      ribbon:        enabled: false  security:    oauth2:      client:        provider:          keycloak:
+        uri: lb://course-service        predicates:        - Path=/api/course
+      - id: assignment-service
+        uri: lb://assignment-service
+        predicates:        - Path=/api/assignment      default-filters:      - TokenRelay    loadbalancer:      ribbon:        enabled: false  security:    oauth2:      client:        provider:          keycloak:
             issuer-uri: http://localhost:8180/auth/realms/everplatform-realm
         registration:          spring-cloud-gateway-client:
             client-id: spring-cloud-gateway-client
