--- a/Course/pom.xml
+++ b/Course/pom.xml
@@ -81,6 +81,11 @@
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-oauth2-jose</artifactId>
 		</dependency>
+		<dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-feign</artifactId>
+            <version>1.4.7.RELEASE</version>
+        </dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
