--- a/WebClient/package.json
+++ b/WebClient/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "~12.0.3",
     "@angular/platform-browser-dynamic": "~12.0.3",
     "@angular/router": "~12.0.3",
+    "keycloak-angular": "^8.2.0",
+    "keycloak-js": "^13.0.1",
     "ngx-toastr": "^14.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
