--- a/Course/pom.xml
+++ b/Course/pom.xml
@@ -91,6 +91,11 @@
 			<artifactId>commons-dto</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>com.dtw</groupId>
+			<artifactId>errorHandler</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
