--- a/Properties/assignment-service.properties
+++ b/Properties/assignment-service.properties
@@ -1,2 +1,3 @@
-spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
-spring.jpa.hibernate.ddl-auto = update
+spring.datasource.driver-class-name = org.h2.Driver
+spring.h2.console.enabled = true
+spring.jpa.database-platform = org.hibernate.dialect.H2Dialect
