--- a/GatewayService/src/main/resources/application.yml
+++ b/GatewayService/src/main/resources/application.yml
@@ -1,18 +1,7 @@
+server:  port: 8080
 spring:
-  security:
-    oauth2:
-      client:
-        provider:
-          keycloak:
-            issuer-uri: http://localhost:8180/auth/realms/everplatform-realm
-            user-name-attribute: preferred_username
-        registration:
-          keycloak:
-            client-id: spring-cloud-gateway-client
   cloud:
     gateway:
-      default-filters:
-      - TokenRelay
       globalcors:
         cors-configurations:
           '[/**]':
@@ -36,8 +25,9 @@ spring:
         - Path=/api/assignment/**
       - id: webapp
         uri: http://localhost:4200/**
-        predicates:        - Path=/**
-        filters:        - RemoveRequestHeader=Cookie  application:    name: gateway-service  main:    allow-bean-definition-overriding: true
+        predicates:
+        - Path=/**  application:    name: gateway-service
 eureka:
   instance:
     instance-id: ${spring.application.name}:${random.uuid}
+management:  endpoints:    web:      exposure:        include:        - "*"
