--- a/Assignment/src/main/resources/bootstrap.yml
+++ b/Assignment/src/main/resources/bootstrap.yml
@@ -2,7 +2,7 @@ server:
   port: 0
 eureka:
   instance:
-    instance-id: ${spring.application.name}:${random.uuid}
+    instance-id: ${spring.application.name}:${random.uuid}    prefer-ip-address: true
 spring:
   datasource:
     url: jdbc:h2:mem:db
@@ -12,7 +12,7 @@ spring:
     name: assignment-service
   cloud:
     config:
-      uri: http://localhost:8888
+      uri: http://localhost:8888    discovery:      enabled: true
   rabbitmq:
     host: localhost
     port: 5672
