Added OAuthServer to discovery server and to gateway server

--- a/GatewayService/src/main/resources/application.yml
+++ b/GatewayService/src/main/resources/application.yml
@@ -22,7 +22,7 @@ spring:
       - id: assignment-service
         uri: lb://assignment-service
         predicates:
-        - Path=/api/assignment/**
+        - Path=/api/assignment/**      - id: auth-server        uri: lb://auth-server        predicates:        - Path=/oauth/**
       - id: webapp
         uri: http://localhost:4200/**
         predicates:
