--- a/OAuthServer/src/main/resources/application.yml
+++ b/OAuthServer/src/main/resources/application.yml
@@ -1,3 +1,7 @@
 server:
   port: 8000
 spring:  application:    name: auth-server
+eureka:
+  instance:
+    instance-id: ${spring.application.name}:${random.uuid}
+    prefer-ip-address: true
