--- a/OAuthServer/src/main/resources/application.yml
+++ b/OAuthServer/src/main/resources/application.yml
@@ -1,6 +1,11 @@
 server:
   port: 8000
-spring:  application:    name: auth-server
+spring:
+  jpa:    hibernate:      ddl-auto: update
+  datasource:    url: jdbc:mysql://localhost:3306/oauth
+    username: root
+    password: root
+    driver-class-name: com.mysql.cj.jdbc.Driver  application:    name: auth-server
 eureka:
   instance:
     instance-id: ${spring.application.name}:${random.uuid}
