--- a/Properties/course-service.properties
+++ b/Properties/course-service.properties
@@ -1,3 +1,2 @@
-spring.datasource.driver-class-name = org.h2.Driver
-spring.h2.console.enabled = true
-spring.jpa.database-platform = org.hibernate.dialect.H2Dialect
+spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.ddl-auto = update
