--- a/OAuthServer/src/main/resources/application.yml
+++ b/OAuthServer/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8000
 spring:
   jpa:    hibernate:      ddl-auto: update
-  datasource:    url: jdbc:mysql://localhost:3306/oauth
+  datasource:    url: jdbc:mysql://localhost:3306/oauth?createDatabaseIfNotExist=true
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver  application:    name: auth-server
