--- a/Assignment/pom.xml
+++ b/Assignment/pom.xml
@@ -75,6 +75,30 @@
 			<artifactId>errorHandler</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.springframework.cloud</groupId>
+		    <artifactId>spring-cloud-starter-oauth2</artifactId>
+		    <version>2.2.5.RELEASE</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.springframework.cloud</groupId>
+		    <artifactId>spring-cloud-starter-security</artifactId>
+		    <version>2.2.5.RELEASE</version>
+		</dependency>
+		<dependency>
+	        <groupId>com.sun.xml.bind</groupId>
+	        <artifactId>jaxb-core</artifactId>
+	        <version>2.3.0.1</version>
+	    </dependency>
+	    <dependency>
+	        <groupId>javax.xml.bind</groupId>
+	        <artifactId>jaxb-api</artifactId>
+	        </dependency>
+	    <dependency>
+	        <groupId>com.sun.xml.bind</groupId>
+	        <artifactId>jaxb-impl</artifactId>
+	        <version>2.3.1</version>
+	    </dependency>
 	</dependencies>
 
 	<dependencyManagement>
