--- a/Assignment/pom.xml
+++ b/Assignment/pom.xml
@@ -99,6 +99,10 @@
 	        <artifactId>jaxb-impl</artifactId>
 	        <version>2.3.1</version>
 	    </dependency>
+	    <dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
