--- a/Assignment/src/main/resources/bootstrap.yml
+++ b/Assignment/src/main/resources/bootstrap.yml
@@ -8,12 +8,8 @@ spring:
     name: assignment-service
   cloud:
     config:
-      uri: http://localhost:8888    discovery:      enabled: true
-  rabbitmq:
-    host: localhost
-    port: 5672
-    username: guest
-    password: guest  autoconfigure:    exclude:    - org.springframework.boot.autoconfigure.security.servlet.UserDetailsServiceAutoConfiguration  profiles:    active:    - test
+      uri: http://localhost:8888
+      name: assignment    discovery:      enabled: true  autoconfigure:    exclude:    - org.springframework.boot.autoconfigure.security.servlet.UserDetailsServiceAutoConfiguration  profiles:    active:    - test
 management.endpoints.web.exposure.include: "*"
 security:  oauth2:    resource:      token-info-uri: http://localhost:8282/oauth/check_token
     client:      client-id: mobile
