--- a/Assignment/src/main/resources/bootstrap.yml
+++ b/Assignment/src/main/resources/bootstrap.yml
@@ -12,5 +12,5 @@ spring:
       name: assignment    discovery:      enabled: true  autoconfigure:    exclude:    - org.springframework.boot.autoconfigure.security.servlet.UserDetailsServiceAutoConfiguration  profiles:    active:    - test
 management.endpoints.web.exposure.include: "*"
 security:  oauth2:    resource:      token-info-uri: http://localhost:8282/oauth/check_token
-    client:      client-id: mobile
-      client-secret: pin
+    client:      client-id: web
+      client-secret: webpass
