--- a/Assignment/src/main/resources/bootstrap.yml
+++ b/Assignment/src/main/resources/bootstrap.yml
@@ -10,7 +10,6 @@ spring:
     config:
       uri: http://localhost:8888
       name: assignment    discovery:      enabled: true  autoconfigure:    exclude:    - org.springframework.boot.autoconfigure.security.servlet.UserDetailsServiceAutoConfiguration  profiles:    active:    - test
-management.endpoints.web.exposure.include: "*"
-security:  oauth2:    resource:      token-info-uri: http://localhost:8282/oauth/check_token
+security:  oauth2:    resource:      token-info-uri: http://localhost:8282/oauth/check_token      id: assignment
     client:      client-id: web
       client-secret: webpass
