--- a/Assignment/pom.xml
+++ b/Assignment/pom.xml
@@ -59,7 +59,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.dtw</groupId>
-			<artifactId>commons-dto</artifactId>
+			<artifactId>commons</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
@@ -67,34 +67,32 @@
 			<artifactId>errorHandler</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+	    <dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+		</dependency>
 		<dependency>
 		    <groupId>org.springframework.cloud</groupId>
 		    <artifactId>spring-cloud-starter-oauth2</artifactId>
 		    <version>2.2.5.RELEASE</version>
 		</dependency>
-		<dependency>
-		    <groupId>org.springframework.cloud</groupId>
-		    <artifactId>spring-cloud-starter-security</artifactId>
-		    <version>2.2.5.RELEASE</version>
-		</dependency>
+		<!-- needed for oauth2 -->
 		<dependency>
 	        <groupId>com.sun.xml.bind</groupId>
 	        <artifactId>jaxb-core</artifactId>
 	        <version>2.3.0.1</version>
 	    </dependency>
+	    <!-- needed for oauth2 -->
 	    <dependency>
 	        <groupId>javax.xml.bind</groupId>
 	        <artifactId>jaxb-api</artifactId>
-	        </dependency>
+	    </dependency>
+	    <!-- needed for oauth2 -->
 	    <dependency>
 	        <groupId>com.sun.xml.bind</groupId>
 	        <artifactId>jaxb-impl</artifactId>
 	        <version>2.3.1</version>
 	    </dependency>
-	    <dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
