--- a/Assignment/src/main/resources/bootstrap.yml
+++ b/Assignment/src/main/resources/bootstrap.yml
@@ -9,7 +9,7 @@ spring:
   cloud:
     config:
       uri: http://localhost:8888
-      name: assignment    discovery:      enabled: true  autoconfigure:    exclude:    - org.springframework.boot.autoconfigure.security.servlet.UserDetailsServiceAutoConfiguration  profiles:    active:    - test
-security:  oauth2:    resource:      token-info-uri: http://localhost:8282/oauth/check_token      id: assignment
-    client:      client-id: web
+      name: assignment    discovery:      enabled: true  autoconfigure:    exclude:    - org.springframework.boot.autoconfigure.security.servlet.UserDetailsServiceAutoConfiguration
+security:  oauth2:    resource:      token-info-uri: http://localhost:8282/oauth/check_token
+      id: assignment    client:      client-id: web
       client-secret: webpass
