--- a/Course/src/main/resources/bootstrap.yml
+++ b/Course/src/main/resources/bootstrap.yml
@@ -2,16 +2,14 @@ server:
   port: 0
 eureka:
   instance:
-    instance-id: ${spring.application.name}:${random.uuid}    prefer-ip-address: true
+    instance-id: ${spring.application.name}:${random.uuid}
+    prefer-ip-address: true
 spring:
-  datasource:
-    url: jdbc:mysql://localhost:3306/course?createDatabaseIfNotExist=true
-    username: root
-    password: root
-    driver-class-name: com.mysql.cj.jdbc.Driver
   application:
     name: course-service
   cloud:
     config:
       uri: http://localhost:8888
-management.endpoints.web.exposure.include: "*"
+      name: course
+    discovery:
+      enabled: true
