--- a/GatewayService/src/main/resources/application.yml
+++ b/GatewayService/src/main/resources/application.yml
@@ -1,4 +1,5 @@
-server:  port: 8080
+server:
+  port: 8080
 spring:
   cloud:
     gateway:
@@ -22,12 +23,28 @@ spring:
       - id: assignment-service
         uri: lb://assignment-service
         predicates:
-        - Path=/api/assignment/**      - id: auth-server        uri: lb://auth-server        predicates:        - Path=/oauth/**
+        - Path=/api/assignment/**
+      - id: homework-service
+        uri: lb://homework-service
+        predicates:
+        - Path=/api/homework/**
+      - id: course-aggregator-service
+        uri: lb://course-aggregator-service
+        predicates:
+        - Path=/api/courseAggregator/**
+      - id: auth-server
+        uri: lb://auth-server
+        predicates:
+        - Path=/oauth/**
       - id: webapp
         uri: http://localhost:4200/**
         predicates:
-        - Path=/web/**    discovery:      enabled: true  application:    name: gateway-service
+        - Path=/web/**
+    discovery:
+      enabled: true
+  application:
+    name: gateway-service
 eureka:
   instance:
-    instance-id: ${spring.application.name}:${random.uuid}    prefer-ip-address: true
-management:  endpoints:    web:      exposure:        include:        - "*"
+    instance-id: ${spring.application.name}:${random.uuid}
+    prefer-ip-address: true
