--- a/CourseAggregator/pom.xml
+++ b/CourseAggregator/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.dtw</groupId>
-	<artifactId>CourseAggregatorService</artifactId>
+	<artifactId>CourseAggregator</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>CourseAggregatorService</name>
+	<name>CourseAggregator</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
