--- a/Course/pom.xml
+++ b/Course/pom.xml
@@ -71,6 +71,28 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 		</dependency>
+		<dependency>
+		    <groupId>org.springframework.cloud</groupId>
+		    <artifactId>spring-cloud-starter-oauth2</artifactId>
+		    <version>2.2.5.RELEASE</version>
+		</dependency>
+		<!-- needed for oauth2 -->
+		<dependency>
+	        <groupId>com.sun.xml.bind</groupId>
+	        <artifactId>jaxb-core</artifactId>
+	        <version>2.3.0.1</version>
+	    </dependency>
+	    <!-- needed for oauth2 -->
+	    <dependency>
+	        <groupId>javax.xml.bind</groupId>
+	        <artifactId>jaxb-api</artifactId>
+	    </dependency>
+	    <!-- needed for oauth2 -->
+	    <dependency>
+	        <groupId>com.sun.xml.bind</groupId>
+	        <artifactId>jaxb-impl</artifactId>
+	        <version>2.3.1</version>
+	    </dependency>
 	</dependencies>
 
 	<dependencyManagement>
