--- a/Homework/src/main/resources/bootstrap.yml
+++ b/Homework/src/main/resources/bootstrap.yml
@@ -16,3 +16,14 @@ spring:
   profiles:
     active:
     - test
+  autoconfigure:
+    exclude:
+    - org.springframework.boot.autoconfigure.security.servlet.UserDetailsServiceAutoConfiguration
+security:
+  oauth2:
+    resource:
+      token-info-uri: http://localhost:8282/oauth/check_token
+      id: homework
+    client:
+      client-id: web
+      client-secret: webpass
