--- a/AuthServer/pom.xml
+++ b/AuthServer/pom.xml
@@ -44,8 +44,13 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<scope>runtime</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+		</dependency>
+		
 		<!-- nedeed so oaut2 wont complain -->
 		<dependency>
 			<groupId>org.glassfish.jaxb</groupId>
