--- a/AuthServer/src/main/resources/application-test.yml
+++ b/AuthServer/src/main/resources/application-test.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     username: sa
     password: 
-    url: jdbc:h2:mem:course;DB_CLOSE_ON_EXIT=FALSE
+    url: jdbc:h2:mem:oauth;DB_CLOSE_ON_EXIT=FALSE
     driverClassName: org.h2.Driver
     platform: h2
   h2:
